--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "antd": "^4.23.2",
-    "firebase": "^9.10.0",
+    "axios": "^1.1.2",
     "date-fns": "^2.29.3",
+    "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.9.2",
