Agregar variable de entorno para server URL

--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "antd": "^4.23.2",
-    "firebase": "^9.10.0",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.9.2",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.3",
     "shopit-shared": "file:../proyecto-2022-shared",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
