--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jss": "^10.9.2",
+    "react-mitt": "^1.0.1",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
     "react-scripts": "4.0.3",
