--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "antd": "^4.23.2",
+    "antd-button-color": "^1.0.4",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "firebase": "^9.10.0",
