--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "antd-button-color": "^1.0.4",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
-    "firebase": "^9.10.0",
+    "firebase": "^9.13.0",
     "react": "^18.2.0",
+    "react-chat-ui": "^0.4.0",
+    "react-chat-widget": "^3.1.4",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-jss": "^10.9.2",
     "react-mitt": "1.0.1",
     "react-router": "^6.4.1",
