--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-chat-ui": "^0.4.0",
     "react-chat-widget": "^3.1.4",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-jss": "^10.9.2",
