--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_SERVER_URL=shopnow-backend.rj.r.appspot.com DEPLOY
+#REACT_APP_SERVER_URL=shopnow-backend.rj.r.appspot.com
 REACT_APP_SERVER_URL=localhost:8080
