--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 runtime: nodejs16
-instance: F2
+instance_class: F2
 handlers:
   # Serve all static files with url ending with a file extension
   - url: /(.*\..+)$
